# ubiquitous-spoon

./: .gitignore
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.rs
crates/app/src/controllers/: audios.rs  files.rs  mod.rs  stream.rs  videos.rs
crates/app/src/controllers/settings/: mod.rs  updater.rs
crates/app/src/controllers/stream/: chunk.rs  mod.rs  range.rs  response.rs  whole.rs
crates/app/src/entities/: file.rs  mod.rs
crates/app/src/repositories/: audios.rs  files.rs  mod.rs  videos.rs
crates/app/src/services/: mod.rs  updater.rs
crates/app/static/bootstrap/: bootstrap-icons.txt
crates/app/static/custom/: filter-list.js  styles.css
crates/app/static/videojs/: custom.css
crates/app/templates/base/: base.html  list.html  macros.html
crates/app/templates/components/: navbar.html
crates/app/templates/views/: files.html  index.html  settings.html
crates/app/templates/views/audios/: list.html  player.html
crates/app/templates/views/videos/: list.html  player.html
crates/app/tests/test/: audios.rs  common.rs  files.rs  mod.rs  refresh.rs  settings.rs  stream.rs  videos.rs
crates/fs/: Cargo.toml
crates/fs/src/: error.rs  lib.rs  path.rs
crates/fs/src/dir/: directory.rs  entry.rs  mod.rs
crates/fs/src/file/: file.rs  mod.rs  range.rs
crates/fs/tests/: dir.rs  file.rs
crates/testing/: Cargo.toml
crates/testing/src/: functions.rs  lib.rs
