[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
axum = "0.3"
sea-orm = { version = "0.3", features = ["macros", "runtime-tokio-native-tls", "sqlx-sqlite"], default-features = false }
askama = "0.10"
