[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = { path = "../fs" }

tokio = { version = "1.6", features = ["full"] }
futures = "0.3"
axum = "0.3"
tower-http = { version = "0.1", features = ["fs"], default-features = false }
sea-orm = { version = "0.3", features = ["macros", "runtime-tokio-native-tls", "sqlx-sqlite"], default-features = false }
askama = "0.10"
serde = "1"
anyhow = "1.0"
regex = "1.5"
once_cell = "1.9"

[dev-dependencies]
testing = { path = "../testing" }
tower = { version = "0.4", features = ["util"] }
